[package]
name = "solana-bpf-helloworld"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.10.0"
solana-program = "~1.16.0"
getrandom = { version = "0.2", features = ["custom"] }
libc = "0.2"

[dev-dependencies]
solana-program-test = "~1.16.0"
solana-sdk = "~1.16.0"

[lib]
crate-type = ["cdylib", "lib"]

[target.'cfg(target_os = "solana")'.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

